--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root {
-  --my-custom-color: #eb343a;
+  --my-custom-color: #426085;
 }
 
 .custom-thumbnail {
-  border: 4px solid #4b2699 !important;
+  border: 4px solid #dfa753 !important;
   box-shadow: 0 0 15px #4b2699 !important;
 }
 .hero-box .box p {
